# krust

tokio_hello/: Cargo.toml  Dockerfile  README.md  makefile  operator-deployment.yaml
tokio_hello/deployment/: controller-deployment.yaml  kind-config.yaml  operator-rbac.yaml  pinger-crd.yaml  pinger-instance.yaml  readmd.md
tokio_hello/src/: error.rs  lib.rs  main.rs
